// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  Hello world
</p>
`;

exports[`composition hook should return with Link props 1`] = `
Object {
  "className": "css-qdzm2w css-63it0p css-1qnz8fc bb-Box bb-Link",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<a
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Link"
>
  hello world
</a>
`;

exports[`overrides Link.base should render correctly 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<a
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  hello world
</a>
`;

exports[`overrides Link.hover should render correctly 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<a
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  hello world
</a>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<a
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  Hello world
</a>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

<a
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  Hello world
</a>
`;

exports[`theming Link.base should render correctly 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<a
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  hello world
</a>
`;

exports[`theming Link.hover should render correctly 1`] = `
.emotion-0 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<a
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Link"
>
  hello world
</a>
`;
